Finalized ID Fixes

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -108,7 +108,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -345,33 +345,33 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "oscars = get_all_years();\n",
-      "oscars = repair_dict(oscars)\n",
-      "f = open(\"data/oscars.json\",\"w+\")\n",
-      "json.dump(oscars,f)\n",
-      "f.close()\n",
+      "# oscars = get_all_years();\n",
+      "# oscars = repair_dict(oscars)\n",
+      "# f = open(\"data/oscars.json\",\"w+\")\n",
+      "# json.dump(oscars,f)\n",
+      "# f.close()\n",
       "\n",
-      "# # load an existing dictionary\n",
-      "# f = open(\"data/oscars.json\",\"rb\")\n",
-      "# oscars = json.load(f)\n",
-      "# f.close()"
+      "# load an existing dictionary\n",
+      "f = open(\"data/oscars.json\",\"rb\")\n",
+      "oscars = json.load(f)\n",
+      "f.close()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print oscars[2003]['Best Cinematography']"
+      "print oscars['2003']['Best Cinematography']"
      ],
      "language": "python",
      "metadata": {},
@@ -380,11 +380,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{'nominees': [('Chicago', '0299658'), ('Far from Heaven', '0297884'), ('Gangs of New York', '0217505'), ('The Pianist', '0253474')], 'winner': ('Road to Perdition', '0257044')}\n"
+        "{u'nominees': [[u'Chicago', u'0299658'], [u'Far from Heaven', u'0297884'], [u'Gangs of New York', u'0217505'], [u'The Pianist', u'0253474']], u'winner': [u'Road to Perdition', u'0257044']}\n"
        ]
       }
      ],
-     "prompt_number": 46
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -496,7 +496,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -504,16 +504,6 @@
      "source": [
       "<b>Saving data for years of interest:</b>"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#manual addition of data"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "code",
@@ -628,12 +618,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "id_data=pd.read_csv('./data/completedata.csv')"
+      "id_data=pd.read_csv('./data/revised_id_data.csv')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 99
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -655,8 +645,8 @@
       "total_winners_present = 0\n",
       "total_winners_absent = 0\n",
       "for (yr,yr_list) in oscars.iteritems():\n",
-      "    if yr>2003:\n",
-      "        yr=yr-1\n",
+      "    if int(yr)>2003:\n",
+      "        yr=int(yr)-1\n",
       "        movieids=data_by_year[yr]\n",
       "        nominee_ids=[]\n",
       "        winner_ids=[]\n",
@@ -715,13 +705,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "2003 nominee performance: 0.813953488372\n",
-        "2003 winner performance: 0.875\n",
+        "2005 nominee performance: 0.776470588235\n",
+        "2005 winner performance: 0.666666666667\n",
         "\n",
-        "2004 nominee performance: 0.784090909091\n",
-        "2004 winner performance: 0.875\n",
+        "2006 nominee performance: 0.786516853933\n",
+        "2006 winner performance: 0.833333333333\n",
         "\n",
-        "2005 nominee performance: 0.764705882353"
+        "2003 nominee performance: 0.813953488372"
        ]
       },
       {
@@ -729,10 +719,10 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "2005 winner performance: 0.625\n",
+        "2003 winner performance: 0.875\n",
         "\n",
-        "2006 nominee performance: 0.786516853933\n",
-        "2006 winner performance: 0.833333333333\n",
+        "2004 nominee performance: 0.806818181818\n",
+        "2004 winner performance: 0.875\n",
         "\n",
         "2007 nominee performance: 0.797752808989"
        ]
@@ -747,7 +737,7 @@
         "2008 nominee performance: 0.747126436782\n",
         "2008 winner performance: 0.791666666667\n",
         "\n",
-        "2009 nominee performance: 0.680412371134"
+        "2010 nominee performance: 0.760416666667"
        ]
       },
       {
@@ -755,9 +745,12 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "2009 winner performance: 0.458333333333\n",
+        "2010 winner performance: 0.833333333333\n",
         "\n",
-        "2010 nominee performance: 0.739583333333"
+        "2009 nominee performance: 0.721649484536\n",
+        "2009 winner performance: 0.541666666667\n",
+        "\n",
+        "2012 nominee performance: 0.755102040816"
        ]
       },
       {
@@ -765,27 +758,17 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "2010 winner performance: 0.75\n",
+        "2012 winner performance: 0.833333333333\n",
         "\n",
-        "2011 nominee performance: 0.726315789474\n",
+        "2011 nominee performance: 0.736842105263\n",
         "2011 winner performance: 0.833333333333\n",
         "\n",
-        "2012 nominee performance: 0.704081632653"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "2012 winner performance: 0.708333333333\n",
-        "\n",
-        "total nominee performance: 0.752747252747\n",
-        "total winner performance: 0.754166666667\n"
+        "total nominee performance: 0.769230769231\n",
+        "total winner performance: 0.7875\n"
        ]
       }
      ],
-     "prompt_number": 101
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
