Description of Movie Selection Process

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -108,7 +108,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -345,7 +345,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -364,7 +364,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "ename": "IOError",
+       "evalue": "[Errno 2] No such file or directory: 'data/oscars.json'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-4-9ca27c0fac09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# load an existing dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data/oscars.json\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0moscars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'data/oscars.json'"
+       ]
+      }
+     ],
      "prompt_number": 4
     },
     {
@@ -391,7 +402,32 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<h2> Getting the Movies </h2>"
+      "<h1>Populating a List of Candidate Movies</h1>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In order to run our analysis, we need to isolate a dataset of movies for a given year that are candidates for an Oscar. For this purpose, we decided to extract a subset of the movies outlined by <a href=\"http://www.boxofficemojo.com/yearly\">Box Office Mojo</a> as the top movies in a given year. Assumming that the movies most likely to win an Oscar are likely to be among those with the highest gross revenue in a given year, we decided to select the Top 200 movies from each year as candidates for an Oscar (in the following year)."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<h2>Getting the Movies</h2>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The function get_top_movies_by_year takes two arguments, year and the number of movies desired for that given year. The function returns a dataframe for the given year with the following columns:\n",
+      "<ul>\n",
+      "<li>rank</li><li>year</li><li>movie_title</li><li>imdbid</li><li>rtid</li><li>studio</li><li>total_gross</li><li>num_theaters_total</li><li>opening_revenue</li><li>num_theaters_opening</li><li>date_open</li><li>date_close</li>\n",
+      "</ul>\n",
+      "This data, with the exception of IMDBid and RTid, is obtained from <a href=\"http://www.boxofficemojo.com/yearly\">Box Office Mojo</a>. In a first pass, we attempt to collect IMDBid and RTid from <a href=\"http://developer.rottentomatoes.com/\">Rotten Tomatoes API</a>. For the movies that we cannot successfully isolate an IMDBid for, we attempt to obtain an id through the <a href=\"http://www.omdbapi.com/\">OMDB API</a>."
      ]
     },
     {
@@ -419,6 +455,8 @@
       "                            movie_title = web.strip_tags(cols[1]).strip('\\t')\n",
       "                            movie_title = unicodedata.normalize('NFKD', movie_title).encode('ascii', 'ignore') #removes accents\n",
       "                            studio = web.strip_tags(cols[2]).strip('\\t')\n",
+      "                            \n",
+      "                            # the below try/except mechanisms catch errors when there is a NONE instead of a string which is a candidate for integer casting\n",
       "                            try:\n",
       "                                total_gross = int(((web.strip_tags(cols[3])).strip('$')).replace(',', ''))\n",
       "                            except:\n",
@@ -435,6 +473,7 @@
       "                                num_theaters_opening = int((web.strip_tags(cols[6])).replace(',', ''))\n",
       "                            except:\n",
       "                                num_theaters_opening = None\n",
+      "                            \n",
       "                            date_open = web.strip_tags(cols[7]).strip('\\t')\n",
       "                            date_close = web.strip_tags(cols[8]).strip('\\t')\n",
       "                            \n",
@@ -460,7 +499,7 @@
       "                                rtid = ''\n",
       "                                imdbid = ''\n",
       "                            \n",
-      "                            # second attempt at imdbids\n",
+      "                            # second attempt to obtain imdb ids using the omdbapi\n",
       "                            if imdbid=='':\n",
       "                                try:\n",
       "                                    omdb_link = \"http://www.omdbapi.com/?t=%s&y=%s\" % (movie_title,yr)\n",
@@ -503,21 +542,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<b>Saving data for years of interest:</b>"
+      "In order to obtain the candidate movies for the timerange of the data we are investigating (2003-2012), we must run get_top_movies_by_year and create a unified dataframe of movie data. The datafile 'alldata_200.csv' includes all of the data outlined previously that we obtain from <a href=\"http://www.boxofficemojo.com/yearly\">Box Office Mojo</a>. The datafile 'iddata_200.csv' only includes the data needed by portions of the project in order to collect additional movie data, namely: year, movie rank, imdbid, and rtid."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Reads in just title and ids\n",
-      "# for yr in range(2003,2013):\n",
-      "#     num_movies=200\n",
-      "#     result=get_top_movies_by_year(yr,num_movies)\n",
-      "#     narrowed_data=pd.DataFrame(result, columns=['rank','movie_title','imdbid','rtid'])\n",
-      "#     filename=str(yr) + '_top' + str(num_movies) + '.csv'\n",
-      "#     narrowed_data.to_csv(filename, index=False)\n",
-      "   \n",
       "# #Reads in all data\n",
       "# alldata=get_top_movies_by_year(2003,200)\n",
       "# for yr in range(2004,2013):\n",
@@ -527,6 +558,12 @@
       "#     print yr\n",
       "# filename='./data/alldata_' + str(num_movies) + '.csv'\n",
       "# alldata.to_csv(filename, index=False)\n",
+      "\n",
+      "# Saves just title and id data in a separate file\n",
+      "# narrowed_data=pd.DataFrame(alldata, columns=['year','rank','movie_title','imdbid','rtid'])\n",
+      "# filename='./data/iddata_' + str(num_movies) + '.csv'\n",
+      "# narrowed_data.to_csv(filename, index=False)\n",
+      "\n",
       "alldata=pd.read_csv('data/all_data200.csv')"
      ],
      "language": "python",
