Replacing Movie Selection Verification
It appears to have disappeared earlier

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -108,7 +108,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -345,7 +345,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -364,19 +364,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "IOError",
-       "evalue": "[Errno 2] No such file or directory: 'data/oscars.json'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-4-9ca27c0fac09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# load an existing dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data/oscars.json\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0moscars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'data/oscars.json'"
-       ]
-      }
-     ],
-     "prompt_number": 4
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -388,15 +377,14 @@
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 5,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
         "{u'nominees': [[u'Chicago', u'0299658'], [u'Far from Heaven', u'0297884'], [u'Gangs of New York', u'0217505'], [u'The Pianist', u'0253474']], u'winner': [u'Road to Perdition', u'0257044']}\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -568,8 +556,183 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<h3>Verifying Movie Selection</h3>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data_by_year = alldata.groupby('year').groups"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'alldata' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-2-742120e4910b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_by_year\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malldata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'year'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroups\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mNameError\u001b[0m: name 'alldata' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<h3>Verifying Movie Selection</h3>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "id_data=pd.read_csv('data/revised_id_data.csv')\n",
+      "imdb_as_index = id_data.set_index('imdbid')\n",
+      "imdb_as_index.head()\n",
+      "data_by_year = imdb_as_index.groupby('year').groups\n",
+      "performance = {}\n",
+      "total_nominees_present = 0\n",
+      "total_nominees_absent = 0\n",
+      "total_winners_present = 0\n",
+      "total_winners_absent = 0\n",
+      "for (yr,yr_list) in oscars.iteritems():\n",
+      "    yr = int(yr)\n",
+      "    if yr>2003:\n",
+      "        yr=yr-1\n",
+      "        movieids=data_by_year[yr]\n",
+      "        nominee_ids=[]\n",
+      "        winner_ids=[]\n",
+      "        \n",
+      "        nominees_present = 0\n",
+      "        nominees_absent = 0\n",
+      "        winners_present = 0\n",
+      "        winners_absent = 0\n",
+      "        \n",
+      "        for (award,award_list) in yr_list.iteritems():\n",
+      "            winner_ids.append(award_list['winner'][1])\n",
+      "            for nominee in award_list['nominees']:\n",
+      "                nominee_ids.append(nominee[1])\n",
+      "        for nid in nominee_ids:\n",
+      "            is_movie_saved = False\n",
+      "            for top200id in movieids:\n",
+      "                try:\n",
+      "                    corrected_id=str(int(top200id)).zfill(7)\n",
+      "                    if corrected_id==nid:\n",
+      "                        is_movie_saved = True\n",
+      "                except:\n",
+      "                    pass\n",
+      "            if is_movie_saved:\n",
+      "                nominees_present += 1\n",
+      "            else:\n",
+      "                nominees_absent += 1\n",
+      "        for wid in winner_ids:\n",
+      "            is_movie_saved = False\n",
+      "            for top200id in movieids:\n",
+      "                try:\n",
+      "                    corrected_id=str(int(top200id)).zfill(7)\n",
+      "                    if corrected_id==wid:\n",
+      "                        is_movie_saved = True\n",
+      "                except:\n",
+      "                    pass\n",
+      "            if is_movie_saved:\n",
+      "                winners_present += 1\n",
+      "            else:\n",
+      "                winners_absent += 1    \n",
+      "        total_nominees_present += nominees_present\n",
+      "        total_nominees_absent += nominees_absent\n",
+      "        total_winners_present += winners_present\n",
+      "        total_winners_absent += winners_absent\n",
+      "        performance[yr]=[winners_present,winners_absent,nominees_present,nominees_absent]\n",
+      "        print str(yr) + ' nominee performance: ' + str(float(nominees_present)/(nominees_present+nominees_absent))\n",
+      "        print str(yr) + ' winner performance: ' + str(float(winners_present)/(winners_present+winners_absent))\n",
+      "        print\n",
+      "\n",
+      "print 'total nominee performance: ' + str(float(total_nominees_present)/(total_nominees_present+total_nominees_absent))\n",
+      "print 'total winner performance: ' + str(float(total_winners_present)/(total_winners_present+total_winners_absent))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2005 nominee performance: 0.776470588235\n",
+        "2005 winner performance: 0.666666666667\n",
+        "\n",
+        "2006 nominee performance: 0.786516853933\n",
+        "2006 winner performance: 0.833333333333\n",
+        "\n",
+        "2003 nominee performance: 0.813953488372"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "2003 winner performance: 0.875\n",
+        "\n",
+        "2004 nominee performance: 0.806818181818\n",
+        "2004 winner performance: 0.875\n",
+        "\n",
+        "2007 nominee performance: 0.797752808989"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "2007 winner performance: 0.791666666667\n",
+        "\n",
+        "2008 nominee performance: 0.747126436782\n",
+        "2008 winner performance: 0.791666666667\n",
+        "\n",
+        "2010 nominee performance: 0.760416666667"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "2010 winner performance: 0.833333333333\n",
+        "\n",
+        "2009 nominee performance: 0.721649484536\n",
+        "2009 winner performance: 0.541666666667\n",
+        "\n",
+        "2012 nominee performance: 0.755102040816"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "2012 winner performance: 0.833333333333\n",
+        "\n",
+        "2011 nominee performance: 0.736842105263\n",
+        "2011 winner performance: 0.833333333333\n",
+        "\n",
+        "total nominee performance: 0.769230769231\n",
+        "total winner performance: 0.7875\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
